fix content invisible

--- a/client/src/styles/freelancer.css
+++ b/client/src/styles/freelancer.css
@@ -11561,3 +11561,8 @@ html {
 .fa-bars {
   margin-left: 3px;
 }
+
+.amn-page {
+  margin-top: 7.5rem;
+  margin-bottom: 1rem;
+}
